# cmake-empty

./: CMakeLists.txt  README.md  main.cpp
Project/: CMakeLists.txt  MyClass.cpp  MyClass.h
